modified:   assets/css/style.css 	new file:   assets/images/Hero_img_2.png 	modified:   assets/js/script.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 </div>
                 <div class="carousel-inner">
-                  <nav class="navbar navbar-expand-lg position-fixed nav_ch p-0" id="navigation-bar" style="z-index: 200; width: 100%;">
+                  <nav class="navbar navbar-expand-lg position-fixed nav_ch bgcolornav p-0" id="navigation-bar" style="z-index: 200; width: 100%;">
                     <div class="container p-2">
                       <a class="navbar-brand" href="./index.html">
                         <img src="./assets/images/logo.png" class="img-fluid" alt="logo" style="width: 100px;">
@@ -53,11 +53,11 @@
                     <div class="carousel-item active pt-5 pb-2" style="position: relative; background-color: antiquewhite;">
                         <div class="row d-flex justify-content-center align-items-center p-4 pt-5">
                             <div class="col-12 col-lg-5 text-center">
-                                <img src="./assets/images/Home_page_image.png" style="width: 600px;"  class="img-fluid" alt="">
+                                <img src="./assets/images/Hero_img_2.png" style="width: 600px; height: 330px;"  class="img-fluid" alt="">
                             </div>
                             <div class="col-12 col-lg-5">
-                                <h1 class="display-4 fw-semibold">Exotic Products</h1>
-                                <h5>Step into the realm of taste with Cocos Exotics, a visionary endeavor founded by the stalwart Mr. Bapu. Our legacy is woven from the threads of commitment, cultivating dreams in the rich soil of agricultural innovation. Mr. Bapu, a seasoned farmer with a passion for the extraordinary, planted the seeds that grew into Cocos Exotics.</h5>
+                                <h1 class="display-4 fw-semibold"><span style="color: #218225;">Exotic</span> Products</h1>
+                                <h6>Step into the realm of taste with Cocos Exotics, a visionary endeavor founded by the stalwart Mr. Bapu. Our legacy is woven from the threads of commitment, cultivating dreams in the rich soil of agricultural innovation. Mr. Bapu, a seasoned farmer with a passion for the extraordinary, planted the seeds that grew into Cocos Exotics.</h6>
                                 <div class="pt-3">
                                     <a class="SubBtn" href="#">Get Started</a>
                                 </div>
@@ -67,11 +67,11 @@
                     <div class="carousel-item pt-5 pb-2" style="position: relative; background-color: antiquewhite;">
                         <div class="row d-flex justify-content-center align-items-center p-4 pt-5">
                             <div class="col-12 col-lg-5 text-center">
-                                <img src="./assets/images/Home_page_image.png" style="width: 600px;" class="img-fluid" alt="">
+                                <img src="./assets/images/Home_page_image.png" style="width: 600px; height: 330px;" class="img-fluid" alt="">
                             </div>
                             <div class="col-12 col-lg-5">
-                                <h1 class="display-4 fw-semibold">Exotic Products</h1>
-                                <h5>Our commitment extends beyond mere cultivation; it's a pledge to redefine culinary boundaries. Mr. Bapu's vision is driving force, transforming conventional vegetables into an exquisite array of exotic produce. Each harvest is testament to our dedication to quality, innovation, and nutritional richness that exotics bring your table.</h5>
+                              <h1 class="display-4 fw-semibold"><span style="color: #218225;">Exotic</span> Products</h1>
+                                <h6>Our commitment extends beyond mere cultivation; it's a pledge to redefine culinary boundaries. Mr. Bapu's vision is driving force, transforming conventional vegetables into an exquisite array of exotic produce. Each harvest is testament to our dedication to quality, innovation, and nutritional richness that exotics bring your table.</h6>
                                 <div class="pt-3">
                                     <a class="SubBtn" href="#">Get Started</a>
                                 </div>
@@ -130,7 +130,7 @@
       </div>
       <img src="./assets/images/dec-1.png" class="img-fluid" style="position: absolute; bottom: 0; right: 0; filter: opacity(0.4); z-index: -1; width: 300px;" alt="">
     </section>
-    <section class="Services p-0">
+    <section class="Services p-0" style="background-color: whitesmoke;">
       <div id="Services" class="pt-5 container">
         <h1 class="display-5 fw-semibold pt-5 text-start">Our<span style="color: #218225;"> Services</span></h1>
         <div class="row d-flex justify-content-center p-3">
@@ -167,8 +167,8 @@
         </div>
       </div>
   </section>
-  <section class="Products p-0" style="background-color: whitesmoke;">
-    <section class="five container pt-5" id="five">
+  <section class="Products p-0" style="background-color: antiquewhite;">
+    <section class="five container pt-5 pb-0" id="five">
       <h1 class="display-5 fw-semibold pt-5 text-start">Our<span style="color: #218225;"> Products</span></h1>
       <div class="gallery">
         <div class="gal">
@@ -234,7 +234,7 @@
       </div>
     </section>
 </section>
-<section class="pb-2" style="background-color: whitesmoke;">
+<section class="pb-2" style="background-color: antiquewhite;">
   <section class="six container" id="five">
     <div class="gallery1">
       <div class="gal1">
@@ -300,7 +300,7 @@
     </div>
   </section>
 </section>
-<section class="why_choose_us p-0">
+<section class="why_choose_us p-0 pb-5">
   <div class="why_choose_us pt-5 container" id="why_choose_us">
     <h1 class="display-5 fw-semibold pt-5 pb-3 text-start">Why Cho<span style="color: #218225;">ose us</span></h1>
     <div class="row d-flex justify-content-center align-items-center">
@@ -358,7 +358,7 @@
 
 
 
-<Section class="ContactUs p-0">
+<Section class="ContactUs p-0 pb-5" style="background-color: whitesmoke;">
   <div class="contact container pt-5" id="contact_us">
     <h1 class="display-5 fw-semibold pt-5 text-start">Contact<span style="color: #218225;"> Us</span></h1>
     <div class="row">
