--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Exotics</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
   </head>
   <body>
     <section class="landing_page" id="landing_page">
@@ -96,11 +97,11 @@
             </div>
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-12 col-lg-6 text-start order-1 order-lg-0">
-                    <h2 class="fw-semibold">Founders Mr. Bapu's Visionary Stewardship:</h2>
-                    <p class="fs-5">Meet the heart and soul of Cocos Exotics, Mr. Bapu, a seasoned farmer and visionary founder. His journey is a testament to unwavering dedication, cultivating dreams through a diverse spectrum of unique crops. Mr. Bapu's passion for the extraordinary has been the driving force behind transforming conventional agriculture into the extraordinary world of Cocos Exotics. His leadership, rooted in a deep connection to the soil, continues to guide us toward excellence, innovation, and a legacy that transcends the ordinary.</p>
+                    <h2 class="fw-semibold">Founders Mr. Ganta Surendhra Babu Garu:</h2>
+                    <p class="fs-5">Meet the heart and soul of Cocos Exotics, Mr. Ganta Surendhra Babu Garu:, a seasoned farmer and visionary founder. His journey is a testament to unwavering dedication, cultivating dreams through a diverse spectrum of unique crops. Mr. Bapu's passion for the extraordinary has been the driving force behind transforming conventional agriculture into the extraordinary world of Cocos Exotics. His leadership, rooted in a deep connection to the soil, continues to guide us toward excellence, innovation, and a legacy that transcends the ordinary.</p>
                 </div>
                 <div class="col-12 col-lg-6 text-center order-0 order-lg-1">
-                    <img src="./assets/images/fooding man 1.png" style="width: 400px;" class="img-fluid" alt="">
+                    <img src="./assets/images/founder_img.png" style="width: 400px;" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
